# crosstool-ng

./: .cdtproject  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.in  .hgignore  .hgtags  .project  .travis.sh  .travis.yml  .version  .yamllint  00-DEDICATION  COPYING  CREDITS  Makefile  Makefile.am  Makefile.in  Makefile.steps  README  README.md  TODO  aarch64.config  bootstrap  config.status  configure  configure.ac  ct-ng  ct-ng.comp  ct-ng.comp.in  ct-ng.in  generate.py  issue_template.md  paths.mk  paths.sh  paths.sh.in  steps.mk  version
.github/workflows/: build-toolchains.yml  continuous-integration-workflow.yml
arch/alpha/: config.in  functions
arch/arm/: config.in  functions
arch/ia64/: config.in  functions
arch/mips/: config.in  functions
arch/powerpc/: config.in  functions
arch/sh/: config.in
autom4te.cache/: output.0  requests  traces.0
config/: .gitignore  arch  backend.in  binutils.in  cc.in  cc_core_gcc.in  cc_gcc.in  comp_libs.in  companion_libs.in  companion_tools.in  config.in  config.mk  config_utils.in  configure.in  configure.in.in  ct-behave.in  debug.in  download_extract.in  elf2flt.in  global.in  gmp_mpfr.in  kernel.in  kernel_cygwin.in  kernel_linux.in  kernel_linux_headers_copy.in  kernel_linux_headers_install.in  libc.in  libc_glibc.in  libc_uClibc.in  linker.in  logging.in  overlay.in  paths.in  target.in  test_suite.in  toolchain.in  tools.in
config/arch/: alpha.in  alpha.in.2  arc.in  arm.in  arm.in.2  avr.in  avr32.in  blackfin.in  bpf.in  c6x.in  ia64.in  lm32.in  loongarch.in  m68k.in  microblaze.in  mips.in  mips.in.2  moxie.in  msp430.in  nios2.in  openrisc.in  parisc.in  powerpc-powerpc64.in-common  powerpc.in  powerpc.in.2  powerpc64.in  pru.in  riscv.in  rx.in  s390.in  s390x.in  sh.in  sh.in.2  sparc.in  tricore.in  x86.in  x86_64.in  xtensa.in  xtensa.in.2
config/arch/alpha/: config.in
config/arch/ia64/: config.in
config/arch/mips/: functions
config/arch/powerpc/: functions
config/arch/sh/: functions
config/arch/x86/: config.in
config/binutils/: binutils.in  binutils.in.2  elf2flt.in  sstrip.in
config/cc/: gcc.in  gcc.in.2  mpfr.in
config/comp_libs/: cloog.in  expat.in  gettext.in  gmp.in  gnuprumcu.in  isl.in  mpc.in  mpfr.in  musl-fts.in  ncurses.in  newlib-nano.in  picolibc-nano.in  picolibc.in  zstd.in
config/comp_tools/: autoconf.in  automake.in  dtc.in  libtool.in  m4.in  make.in
config/companion_libs/: cloog.in  expat.in  gettext.in  gmp.in  isl.in  libelf.in  libiconv.in  mpc.in  mpfr.in  ncurses.in  ppl.in  zlib.in
config/companion_tools/: autoconf.in  automake.in  libtool.in  m4.in  make.in
config/contrib/: gcc-test-suite.in
config/debug/: dmalloc.in  duma.in  gdb.in  gdb.in.cross  gdb.in.gdbserver  gdb.in.native  ltrace.in  strace.in
config/global/: build-behave.in  ct-behave.in  download.in  download_extract.in  extract.in  logging.in  paths.in
config/gmp_mpfr/: gmp.in  mpfr.in
config/kernel/: bare-metal.experimental.in  bare-metal.in  kernel_linux.in  kernel_linux_headers_install.in  linux.in  linux.in-common  linux.in.2  linux_headers_install.in  linux_headers_sanitised.in  mingw32.in  uclinux.in  windows.in
config/libc/: avr-libc.in  avr-libc.in.2  bionic.in  eglibc-glibc-common.in  eglibc.in  glibc-eglibc-common.in  glibc-eglibc.in-common  glibc.in  glibc.in.2  mingw-w64.in  mingw.in  mingw.in.2  moxiebox.in  musl.in  musl.in.2  newlib.in  newlib.in.2  none.in  picolibc.in  uClibc-ng.in  uClibc.in  uClibc.in.2
config/linker/: mold.in
config/tools/: libelf.in  sstrip.in
config/versions/: android-ndk.in  autoconf.in  automake.in  avr-libc.in  binutils.in  bionic.in  cloog.in  duma.in  elf2flt.in  expat.in  gcc.in  gdb.in  gettext.in  glibc-ports.in  glibc.in  gmp.in  isl.in  libelf.in  libiconv.in  libtool.in  linux.in  ltrace.in  m4.in  make.in  mingw-w64.in  mpc.in  mpfr.in  musl.in  ncurses.in  newlib.in  strace.in  uClibc-ng.in  uClibc.in  zlib.in
contrib/: gen-chksum.sh  openrisc-or32.patch.lzma
debian/: .gitignore  README  changelog  control  copyright  rules
docs/: .gitignore  0 - Table of content.txt  1 - Introduction.txt  2 - Installing crosstool-NG.txt  3 - Configuring a toolchain.txt  4 - Building the toolchain.txt  5 - Using the toolchain.txt  6 - Toolchain types.txt  7 - Contributing to crosstool-NG.txt  8 - Internals.txt  9 - Build procedure overview.txt  9 - How is a toolchain constructed.txt  A - Credits.txt  B - Known issues.txt  C - Misc. tutorials.txt  CREDITS  MANUAL_ONLINE  MacOS-X.txt  README.freebsd.txt  README.macos.txt  ct-ng.1  ct-ng.1.in  known-issues.txt  overview.txt
kconfig/: .gitignore  Makefile  Makefile.am  Makefile.in  conf  conf.c  conf.dep  confdata.c  kconfig.mk  lkc.h  mconf  mconf.c  mconf.dep  menu.c  nconf  nconf.c  nconf.dep  nconf.gui.c  nconf.gui.dep  nconf.h  symbol.c  zconf.gperf  zconf.hash.c  zconf.lex.c  zconf.tab.c  zconf.tab.c_shipped  zconf.tab.dep  zconf.y
m4/: README  ctng_cpu_count.m4  ctng_gperf.m4  ctng_prog.m4  ctng_prog_stat.m4  ctng_python.m4  ctng_python_version.m4  ctng_set_kconfig_option.m4  ctng_version_check.m4  lib-prefix.m4
maintainer/: create-release.sh  download-docs.sh  gen-kconfig.sh  gen-versions.sh  git-version-gen  kconfig-choice.template  kconfig-menu.template  kconfig-versions.template  manage-packages.sh  package-versions  package-versions.template  patch-renumber.sh  patch-rework.sh  test-packages.sh
samples/: Makefile  samples.mk
scripts/: .gitignore  addToolVersion.sh  buildToolchain.sh  config.guess  config.sub  crosstool-NG.sh  crosstool-NG.sh.in  crosstool.sh  functions  gen_in_frags.sh  getExtractPatch.sh  mk-patch.sh  mk-release.sh  patch-renumber.sh  patch-rework.sh  populate.in  saveSample.sh  saveSample.sh.in  scripts.mk  scripts.mk.in  show-config.sh  showConfig.sh  showConfig.sh.in  showSamples.sh  showTuple.sh.in  tarball.sh  tarball.sh.broken  toolchain-config.in  upgrade.sed  version-check.sh  wrapper.c  wrapper.in  xldd.in  ylwrap
tools/: Makefile  addToolVersion.sh  extract-config.sh  extractConfig.sh  patch-renumber.sh  populate.in  tools.mk
(+1686 files in other folders)
